fixed pt spacing

--- a/project/assets/css/main.css
+++ b/project/assets/css/main.css
@@ -311,8 +311,8 @@ figure {
 
 #strap {
     position: relative;
-    top: 3.1em;
-    left: 5.7em;
+    top: 2.7em;
+    left: 3.7em;
 }
 
 
